solved bugs on view layer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,6 +157,8 @@
         <EditText
             android:id="@+id/salaryEditText"
             android:hint="Salario"
+            android:inputType="numberDecimal"
+            android:digits="1234567890."
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
@@ -166,6 +168,8 @@
         <EditText
             android:id="@+id/dependentsEditText"
             android:hint="Total Dependentes"
+            android:inputType="number"
+            android:digits="1234567890"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
@@ -192,6 +196,7 @@
             android:gravity="center"
             android:id="@+id/persistDataButton"
             android:text="Salvar Resultado"
+            android:enabled="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
